collect(Collectors.toList()) change to toList();